<resources>
    <string name="app_name">Notification</string>
    <string name="btnSignUp">SignUp</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="telephone">Telephone</string>
    <string name="password">Password</string>
    <string name="repassword">Re-type Password</string>
    <string name="channel_description">test_des</string>
    <string name="channel_name">test</string>
</resources>
